--- a/package.json
+++ b/package.json
@@ -12,4 +12,8 @@
   "devDependencies": {
     "webpack-dev-server": "^4.6.0"
   }
+  },  // ここにカンマを記述
+ "engines" : {
+   "node": "14.18.2"  // ここに先ほど確認したバージョンを記述
+ }
 }
